objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>History_of_broken_bones_muscle_tears_or__c</fullName>
        <description>History of broken bones, muscle tears or tendon / ligament damage</description>
        <label>History of broken bones, muscle, tendon</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_substance_and_or_alcohol_abus__c</fullName>
        <description>History of substance and/or alcohol abuse?</description>
        <label>History of substance +/or alcohol abuse</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_risk_of_violent_behaviour__c</fullName>
        <description>History/risk of displaying violent and/or aggressive behaviour?</description>
        <label>History/risk of violent behaviour?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hoodie_given__c</fullName>
        <label>Hoodie given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hoodie_posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hoodie posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hoodie_size__c</fullName>
        <inlineHelpText>Size of hoodie required</inlineHelpText>
        <label>Hoodie size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Extra Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_hear_about_The_Challenge__c</fullName>
        <label>How hear about The Challenge</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hyperactivity__c</fullName>
        <label>Hyperactivity?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Year_11__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check whether the applicant is in Year 11</description>
        <label>In Year 11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_number__c</fullName>
        <description>Issue number on credit or debit card used</description>
        <label>Issue number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_difficulties__c</fullName>
        <label>Learning difficulties?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live_or_educated_in_our_areas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tests whether they are eligible for The Challenge</description>
        <label>Live or educated in our areas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Looked_after_child_in_care__c</fullName>
        <description>Is the young person a looked after child (in care)?</description>
        <label>Looked after child in care?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>McK_Activity_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Said they wanted to do the McK activity day 22 Aug at Cambridge</description>
        <label>McK Activity Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_info_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick when more information is needed</inlineHelpText>
        <label>Medical info needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_notes__c</fullName>
        <label>Medical notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medically_OK_to_accept__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if OK to accept</inlineHelpText>
        <label>Medically OK to accept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mentor_reference__c</fullName>
        <label>Mentor reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NCST_Payment_Transaction_Name__c</fullName>
        <description>Field added to be able to import more than 1 payment from the NCST and determine to which one it corresponds on the their sytem. In their system, this is an auto-number field with the following format &quot;PAXXXXXXXX&quot; where &quot;XXXXXXXX&quot; is a number. E.g. &quot;PA00017159&quot;</description>
        <label>NCST Payment Transaction Name</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NoShow__c</fullName>
        <inlineHelpText>No show with no working days notice</inlineHelpText>
        <label>No Show</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Not_attending_PG_eve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not attending PG eve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>General notes</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_from_teacher__c</fullName>
        <inlineHelpText>Any additional notes from the school on the applicant</inlineHelpText>
        <label>Notes from teacher</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ORC_assigned__c</fullName>
        <label>ORC assigned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saturdays</fullName>
                </value>
                <value>
                    <fullName>Sundays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ORC_availability__c</fullName>
        <label>ORC availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Either Saturdays or Sundays</fullName>
                </value>
                <value>
                    <fullName>Saturdays only</fullName>
                </value>
                <value>
                    <fullName>Sundays only</fullName>
                </value>
                <value>
                    <fullName>Neither Saturday nor Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ORC_availability_notes__c</fullName>
        <label>ORC availability notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oasis_pick_up_25_july__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oasis pick up 25 july</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_allergic__c</fullName>
        <description>e.g.,  hayfever, reaction to medicine or insect bites</description>
        <label>Other allergic reactions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overdue_tetanus_injection__c</fullName>
        <label>Overdue tetanus injection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Phone_notes__c</fullName>
        <label>PG Phone notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PG_Relation_to_Applicant__c</fullName>
        <label>PG Relation to Applicant</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_address_line_2__c</fullName>
        <label>PG address line 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_address_line_3__c</fullName>
        <label>PG address line 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_city__c</fullName>
        <label>PG city</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_eve_invite_date__c</fullName>
        <description>date letter sent</description>
        <label>PG eve invite date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_eve_invite_for_5_Aug_sent__c</fullName>
        <label>PG eve invite for 5 Aug sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_eve_invite_for_9_July__c</fullName>
        <label>PG eve invite for 9 July</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_form_sent__c</fullName>
        <inlineHelpText>Date PG form was sent</inlineHelpText>
        <label>PG form sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PG_info_old_new_comb_n__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG info old-new comb&apos;n</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PG_last_phoned__c</fullName>
        <description>Date of last conversation with parent or guardian.</description>
        <label>PG last phoned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_G_form_received__c</fullName>
        <inlineHelpText>Date the form was received from the Parent or Guardian</inlineHelpText>
        <label>P/G form received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_name__c</fullName>
        <label>Parent/Guardian name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_s_Surname__c</fullName>
        <label>Parent/Guardian&apos;s Surname</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_s_daytime_tel_number__c</fullName>
        <label>Parent/Guardian&apos;s daytime tel number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_s_email_address__c</fullName>
        <label>Parent/Guardian&apos;s email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_s_evening_tel_number__c</fullName>
        <label>Parent/Guardian&apos;s evening tel number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_s_mobile_number__c</fullName>
        <label>Parent/Guardian&apos;s mobile number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_s_postal_address__c</fullName>
        <label>PG address line 1, if different</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_s_postcode__c</fullName>
        <label>Parent/Guardian&apos;s postcode</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_came_to_PG_eve__c</fullName>
        <label>Parent came to PG eve</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_title__c</fullName>
        <description>Parent title, where known</description>
        <label>Parent title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_banked__c</fullName>
        <inlineHelpText>Date the i) cheque was cashed ii) card payment was taken iii) cash was paid into the bank</inlineHelpText>
        <label>Payment banked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_method__c</fullName>
        <label>Payment method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Postal order</fullName>
                </value>
                <value>
                    <fullName>Credit or debit card Worldpay</fullName>
                </value>
                <value>
                    <fullName>Credit or debit card PayPal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NCS Campaign Call Centre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_notes__c</fullName>
        <label>Payment notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_received__c</fullName>
        <inlineHelpText>Date cheque, cash or card details were received</inlineHelpText>
        <label>Payment received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Physical_disability_restricted_mobility__c</fullName>
        <description>Physical disability, restricted mobility or use a wheelchair?</description>
        <label>Physical disability?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pickup_arranged__c</fullName>
        <inlineHelpText>Details of pick-up, if pick-up has been arranged</inlineHelpText>
        <label>Pickup arranged</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Post_code__c</fullName>
        <description>Post code that card is registered to</description>
        <label>Post code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <description>Participant&apos;s postcode</description>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prog_details_NOT_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prog details NOT received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prog_details_rec_d_by_appl_t__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prog details rec&apos;d by appl&apos;t</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prog_details_rec_d_by_applicant__c</fullName>
        <description>confirmed with applicant that details received</description>
        <label>Prog details rec&apos;d by applicant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Programme_details_sent__c</fullName>
        <description>date of sending pack to P/G and Applicant</description>
        <label>Programme details sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promise_form_received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if form has been received</inlineHelpText>
        <label>Promise form received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_ongoing_Real_Challeng__c</fullName>
        <label>Ready for ongoing Real Challeng</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommender_Credited_in_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box should be checked once the new applicants&apos; name has been copied into the field within the record of the recommender.  The same information will therefore now exist in 2 places.</description>
        <label>Recommender Credited in SF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommender__c</fullName>
        <description>Name of person who recommended that they applied</description>
        <label>Recommender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommender_query_calls__c</fullName>
        <description>calling the person re why recommender has not signed up...to see if their application has been lost</description>
        <label>Recommender query calls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Refund_reason__c</fullName>
        <label>Refund reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Withdrawal within the agreed refund period</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>We cannot offer a place</fullName>
                </value>
                <value>
                    <fullName>Special exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <inlineHelpText>Date application declined</inlineHelpText>
        <label>Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_to_applicant__c</fullName>
        <description>Relationship of the person given consent to the applying participant</description>
        <label>Relationship to applicant</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_to_share_with__c</fullName>
        <label>Request to share with</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reserved__c</fullName>
        <inlineHelpText>Date given a reserved place (pending acceptance)</inlineHelpText>
        <label>Reserved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAM_RCA_preferences__c</fullName>
        <label>SAM RCA preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saturdays</fullName>
                </value>
                <value>
                    <fullName>Sundays</fullName>
                </value>
                <value>
                    <fullName>Either Saturdays or Sundays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAM_application_date__c</fullName>
        <label>SAM application date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAM_location__c</fullName>
        <label>SAM location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North London</fullName>
                </value>
                <value>
                    <fullName>South London</fullName>
                </value>
                <value>
                    <fullName>West London</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAM_team_confirmed__c</fullName>
        <label>SAM team confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Edwards - Media</fullName>
                </value>
                <value>
                    <fullName>Perham - Sport</fullName>
                </value>
                <value>
                    <fullName>Radcliffe - Enterprise</fullName>
                </value>
                <value>
                    <fullName>Reiss - Drama</fullName>
                </value>
                <value>
                    <fullName>Sabesan - Photography</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAM_wave_choice__c</fullName>
        <label>SAM wave choice</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wave 1) 11th - 14th July</fullName>
                </value>
                <value>
                    <fullName>Wave 2) 18th - 21st July</fullName>
                </value>
                <value>
                    <fullName>Wave 3) 25th - 28th July</fullName>
                </value>
                <value>
                    <fullName>Wave 4) 1st - 4th Aug</fullName>
                </value>
                <value>
                    <fullName>Wave 5) 8th - 11th Aug</fullName>
                </value>
                <value>
                    <fullName>Wave 6) 15th - 18th Aug</fullName>
                </value>
                <value>
                    <fullName>Wave 7) 22nd - 25th Aug</fullName>
                </value>
                <value>
                    <fullName>Wave 8) 29th Aug - 1st Sept</fullName>
                </value>
                <value>
                    <fullName>Wave 9) 1st Sept - 4th Sept</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAM_wave_confirmed__c</fullName>
        <label>SAM wave confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birmingham W1</fullName>
                </value>
                <value>
                    <fullName>Birmingham W2</fullName>
                </value>
                <value>
                    <fullName>Birmingham W3</fullName>
                </value>
                <value>
                    <fullName>Birmingham W4</fullName>
                </value>
                <value>
                    <fullName>Birmingham W5</fullName>
                </value>
                <value>
                    <fullName>Birmingham W6</fullName>
                </value>
                <value>
                    <fullName>Birmingham W7</fullName>
                </value>
                <value>
                    <fullName>Birmingham W8</fullName>
                </value>
                <value>
                    <fullName>Birmingham W9</fullName>
                </value>
                <value>
                    <fullName>North London W1</fullName>
                </value>
                <value>
                    <fullName>North London W2</fullName>
                </value>
                <value>
                    <fullName>North London W3</fullName>
                </value>
                <value>
                    <fullName>North London W4</fullName>
                </value>
                <value>
                    <fullName>North London W5</fullName>
                </value>
                <value>
                    <fullName>North London W6</fullName>
                </value>
                <value>
                    <fullName>North London W7</fullName>
                </value>
                <value>
                    <fullName>North London W8</fullName>
                </value>
                <value>
                    <fullName>North London W9</fullName>
                </value>
                <value>
                    <fullName>South London W1</fullName>
                </value>
                <value>
                    <fullName>South London W2</fullName>
                </value>
                <value>
                    <fullName>South London W3</fullName>
                </value>
                <value>
                    <fullName>South London W4</fullName>
                </value>
                <value>
                    <fullName>South London W5</fullName>
                </value>
                <value>
                    <fullName>South London W6</fullName>
                </value>
                <value>
                    <fullName>South London W7</fullName>
                </value>
                <value>
                    <fullName>South London W8</fullName>
                </value>
                <value>
                    <fullName>South London W9</fullName>
                </value>
                <value>
                    <fullName>West London W1</fullName>
                </value>
                <value>
                    <fullName>West London W2</fullName>
                </value>
                <value>
                    <fullName>West London W3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_s_postcode__c</fullName>
        <formula>Account.Postcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School&apos;s postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_choice_of_area_of_interest__c</fullName>
        <label>Second choice of area of interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_number_on_card__c</fullName>
        <description>Three figure number at end of list of numbers on back of card</description>
        <label>Security number on card</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_acceptance__c</fullName>
        <inlineHelpText>Date sent acceptance letter</inlineHelpText>
        <label>Sent acceptance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Severe_hearing_visual_impairments__c</fullName>
        <label>Severe hearing / visual impairments?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Single_Payment_ID__c</fullName>
        <inlineHelpText>This is the Salesforce Record ID of the Single Payment Record that created this Opportunity, used to make some coding issues easier.</inlineHelpText>
        <label>Single Payment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sixth_form__c</fullName>
        <label>Sixth form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Burlington Danes Academy</fullName>
                </value>
                <value>
                    <fullName>Charter School</fullName>
                </value>
                <value>
                    <fullName>City of London Academy</fullName>
                </value>
                <value>
                    <fullName>Crossways Academy</fullName>
                </value>
                <value>
                    <fullName>Hammersmith</fullName>
                </value>
                <value>
                    <fullName>JAGS</fullName>
                </value>
                <value>
                    <fullName>NEET</fullName>
                </value>
                <value>
                    <fullName>Negus (in Plumstead)</fullName>
                </value>
                <value>
                    <fullName>Not at Sixth Form - in employment</fullName>
                </value>
                <value>
                    <fullName>Not at Sixth Form - in other training</fullName>
                </value>
                <value>
                    <fullName>Orpington (in Kent)</fullName>
                </value>
                <value>
                    <fullName>Prendergast</fullName>
                </value>
                <value>
                    <fullName>Richmond upon Thames</fullName>
                </value>
                <value>
                    <fullName>SFX (St Francis Xavier Sixth Form College)</fullName>
                </value>
                <value>
                    <fullName>St Charles Catholic</fullName>
                </value>
                <value>
                    <fullName>St Saviour&apos;s and St Olave&apos;s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Space_to_describe_swimming_ability__c</fullName>
        <label>Space to describe swimming ability</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_dietary_requirements__c</fullName>
        <description>Any special dietary requirements [e.g. vegetarian, vegan or halal]?</description>
        <label>Special dietary requirements?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Split_application__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick box for 2-part applications</inlineHelpText>
        <label>Split application?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_date_of_card__c</fullName>
        <description>MM/YYYY (i.e., 06/1980 for June 1980)</description>
        <label>Start date of card (if appropriate)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
</CustomObject>